<resources>
    <string name="app_name">CabTap</string>
    <string name="app_tag_description">Taking you to your destination..</string>
    <string name="log_in">LOGIN</string>
    <string name="register_now">REGISTER NOW!</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="passenger">PASSENGER</string>
    <string name="driver">DRIVER</string>
    <string name="driver_maintenance">DRIVER MAINTENANCE</string>
    <string name="vehicle_maintenance">VEHICLE MAINTENANCE</string>
    <string name="expense_tracking">EXPENSE TRACKING</string>
    <string name="maintenance">MAINTENANCE</string>
    <string name="reports">REPORTS</string>
    <string name="register_first_name">First Name</string>
    <string name="register_last_name">Last Name</string>
    <string name="register_email">Email Address</string>
    <string name="register_password">Password</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="address_add_driver">Complete Address</string>
    <string name="birthdate">Date of Birth</string>
    <string name="contact_no">Contact Number</string>
    <string name="add_driver">ADD DRIVER</string>
    <string name="add_plate">Plate Number</string>
    <string name="add_make">Make</string>
    <string name="add_model">Model</string>
    <string name="add_year">Year</string>
    <string name="assign_driver">Assign Driver</string>
    <string name="save">SAVE</string>
    <string name="booking_details">PLEASE COMPLETE THE DETAILS:</string>
    <string name="pickup_time">Pick-up Time (h:m:s)</string>
    <string name="pickup_date">Pick-up Date (mm/dd/yyyy)</string>
    <string name="destination">Destination</string>
    <string name="pickup_point">Pick-up Point</string>
    <string name="estimate_fare_rate">Estimated Fare Rate:</string>
    <string name="estimate_fare_note">NOTE: This is only a fare estimate. You need to pay for the taxi fare meter.</string>
    <string name="book_now">BOOK NOW!</string>
    <string name="engine_failure">ENGINE FAILURE</string>
    <string name="health_condition">HEALTH CONDITIONS</string>
    <string name="violation">VIOLATION</string>
    <string name="criminal_case">CRIMINAL CASE</string>
    <string name="others">OTHERS</string>
    <string name="select_maintenance">Select maintenance (Change Oil, etc)</string>
    <string name="maintenance_schedule">Schedule date for maintenance</string>

    <string name="help_1">How to book a ride?</string>
    <string name="help_2">How to create an account in PayMaya?</string>
    <string name="help_3">How to pay through PayMaya?</string>
    <string name="help_4">How to pay with cash?</string>
    <string name="help_5">Where can I access my exact location?</string>

    <string name="how_to_book_1">1.	Login with your account</string>
    <string name="how_to_book_2">2. Click the BOOK A RIDE NOW button</string>
    <string name="how_to_book_3">3.	Fill up the Book Ride form</string>
    <string name="how_to_book_4">4.	Wait for the estimated fare rate</string>
    <string name="how_to_book_5">5. And click the BOOK NOW! button</string>

    <string name="paymaya_app">APP:</string>
    <string name="paymaya_card">CARD:</string>
    <string name="app_paymaya_1">1.	Download the App from App Store or Google Play</string>
    <string name="app_paymaya_2">2.	Register with your name, email and mobile number</string>
    <string name="app_paymaya_3">3.	Create a password</string>
    <string name="app_paymaya_4">4.	Receive a verification via SMS.</string>
    <string name="app_paymaya_5">5.	Enter verification number</string>
    <string name="app_paymaya_6">6.	Click VIEW CARD button</string>
    <string name="app_paymaya_7">7.	Input your address and birthday</string>
    <string name="app_paymaya_8">8. Receive a confirmation that your account has been activated</string>
    <string name="card_paymaya">1. Buy the card here https://paymaya.com/shop/</string>
    <string name="paymaya_already_have_app">If you already have the app, link the physical card to it:</string>
    <string name="paymaya_already_have_app_1">1. Go to “My Cards” in the main menu</string>
    <string name="paymaya_already_have_app_2">2. Tap on “link card” and enter the 16-digit number on the physical card, expiration date and CVV</string>
    <string name="paymaya_dont_have_app">If you don’t have the app yet:</string>
    <string name="paymaya_dont_have_app_1">3. Activate the physical card via SMS. Text activate (space) card ID number (space) first name/last name and send to 292907969*.</string>
    <string name="paymaya_dont_have_app_2">*You should have air time load of at least P1.00</string>
    <string name="paymaya_dont_have_app_3">4. Download the PayMaya app and register with your name, email and mobile number you used to activate the physical card</string>
    <string name="paymaya_dont_have_app_4">5. Receive a verification code via SMS</string>
    <string name="paymaya_dont_have_app_5">6. Go to “My Cards” in the app’s main menu</string>
    <string name="paymaya_dont_have_app_6">7. Tap on the blue PayMaya card</string>
    <string name="paymaya_dont_have_app_7">8. Nominate a 6-digit PIN* </string>
    <string name="paymaya_dont_have_app_8">* You may use this for ATM withdrawals</string>

    <string name="pay_paymaya_1">1.	You must be logged in your account</string>
    <string name="pay_paymaya_2">2. Click the PayMaya icon</string>
    <string name="pay_paymaya_3">3.	Enter your credit card number</string>
    <string name="pay_paymaya_4">4.	Hit enter</string>
    <string name="pay_paymaya_5">5.	You will be notified that the company received your payment</string>

    <string name="pay_cash_1">1. Book a ride online or have a ride.</string>
    <string name="pay_cash_2">2. Once you reached your destination, pay your taxi fare using cash</string>

    <string name="exact_location_1">1. Go to navigate</string>
    <string name="exact_location_2">2. Make sure your GPS location in your phone is turned on</string>

    <string name="card_number">Card Number</string>
    <string name="expiry">Expiry (mm/yy)</string>
    <string name="cvv">CVV</string>
    <string name="payment_method_notes">This will be your primary card</string>
    <string name="payment_method_terms">By adding your debit/credit card, you agree to the Terms and conditions</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="auth_failed">Failed to login</string>
    <string name="loading_button">Loading</string>
    <string name="menu_logout">Logout</string>
    <string name="search_driver_title">Search Driver</string>
    <string name="search_hint_driver">Enter Driver Name</string>
    <string name="booking_reject">Reject</string>
    <string name="booking_accept">Accept</string>
    <string name="booking_cancel">Cancel</string>
    <string name="booking_start">Start</string>
    <string name="booking_complete">Complete</string>
    <string name="select_gender">Select Gender</string>
</resources>
