<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_pay_maya"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/backrepeat"
    tools:context="com.example.alleoindong.cabtap.user.CreatePayMayaActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:text="@string/help_2"
            android:textAllCaps="true"
            android:layout_marginTop="20dp"
            android:textColor="@color/colorBlack"
            android:textAppearance="@style/TextAppearance.FontPath" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/paymaya_app"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorBlack"
            android:textAppearance="@style/TextAppearance.FontPath" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:text="@string/app_paymaya_1"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColor="@color/colorGray"
            android:textAppearance="@style/TextAppearance.FontPath" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:text="@string/app_paymaya_2"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColor="@color/colorGray"
            android:textAppearance="@style/TextAppearance.FontPath" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:text="@string/app_paymaya_3"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColor="@color/colorGray"
            android:textAppearance="@style/TextAppearance.FontPath" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:text="@string/app_paymaya_4"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColor="@color/colorGray"
            android:textAppearance="@style/TextAppearance.FontPath" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:text="@string/app_paymaya_5"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColor="@color/colorGray"
            android:textAppearance="@style/TextAppearance.FontPath" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:text="@string/app_paymaya_6"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColor="@color/colorGray"
            android:textAppearance="@style/TextAppearance.FontPath" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:text="@string/app_paymaya_7"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColor="@color/colorGray"
            android:textAppearance="@style/TextAppearance.FontPath" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:text="@string/app_paymaya_8"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColor="@color/colorGray"
            android:textAppearance="@style/TextAppearance.FontPath" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/paymaya_card"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorBlack"
            android:textAppearance="@style/TextAppearance.FontPath" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:text="@string/card_paymaya"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColor="@color/colorGray"
            android:textAppearance="@style/TextAppearance.FontPath" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/paymaya_already_have_app"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorBlack"
            android:textAppearance="@style/TextAppearance.FontPath" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:text="@string/paymaya_already_have_app_1"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColor="@color/colorGray"
            android:textAppearance="@style/TextAppearance.FontPath" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:text="@string/paymaya_already_have_app_2"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColor="@color/colorGray"
            android:textAppearance="@style/TextAppearance.FontPath" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/paymaya_dont_have_app"
            android:layout_marginTop="30dp"
            android:textColor="@color/colorBlack"
            android:textAppearance="@style/TextAppearance.FontPath" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:text="@string/paymaya_dont_have_app_1"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColor="@color/colorGray"
            android:textAppearance="@style/TextAppearance.FontPath" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:text="@string/paymaya_dont_have_app_2"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColor="@color/colorGray"
            android:textAppearance="@style/TextAppearance.FontPath" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:text="@string/paymaya_dont_have_app_3"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColor="@color/colorGray"
            android:textAppearance="@style/TextAppearance.FontPath" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:text="@string/paymaya_dont_have_app_4"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColor="@color/colorGray"
            android:textAppearance="@style/TextAppearance.FontPath" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:text="@string/paymaya_dont_have_app_5"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColor="@color/colorGray"
            android:textAppearance="@style/TextAppearance.FontPath" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:text="@string/paymaya_dont_have_app_6"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColor="@color/colorGray"
            android:textAppearance="@style/TextAppearance.FontPath" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:text="@string/paymaya_dont_have_app_7"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColor="@color/colorGray"
            android:textAppearance="@style/TextAppearance.FontPath" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size_small"
            android:text="@string/paymaya_dont_have_app_8"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:textColor="@color/colorGray"
            android:textAppearance="@style/TextAppearance.FontPath" />

    </LinearLayout>

</ScrollView>
