<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/backrepeat"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="180dp"
            android:textAppearance="@style/TextAppearance.FontPath"
            android:layout_height="wrap_content"
            android:textSize="@dimen/text_size"
            android:id="@+id/textView"
            android:text="@string/passenger"
            android:layout_marginLeft="110dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorBlack" />

        <ImageView
            android:layout_gravity="center_horizontal"
            android:layout_width="match_parent"
            android:src="@drawable/ic_registration"
            android:layout_height="60dp" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="30dp">

        <EditText
            android:theme="@style/EditTextStyle"
            android:textAppearance="@style/TextAppearance.FontPath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/first_name"
            android:hint="@string/register_first_name"
            android:textSize="24sp" />

        <EditText
            android:theme="@style/EditTextStyle"
            android:textAppearance="@style/TextAppearance.FontPath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textSize="24sp"
            android:textColor="@color/colorBlack"
            android:ems="10"
            android:id="@+id/last_name"
            android:hint="@string/register_last_name" />

        <android.support.v7.widget.AppCompatSpinner
            style="@style/spinner_dropdown"
            android:spinnerMode="dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textColor="@color/colorBlack"
            android:ems="10"
            android:id="@+id/gender"
            android:hint="@string/select_gender"
            android:textAppearance="@style/TextAppearance.FontPath" />

        <EditText
            android:theme="@style/EditTextStyle"
            android:textAppearance="@style/TextAppearance.FontPath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textSize="24sp"
            android:textColor="@color/colorBlack"
            android:ems="10"
            android:id="@+id/email"
            android:hint="@string/register_email" />

        <EditText
            android:theme="@style/EditTextStyle"
            android:textAppearance="@style/TextAppearance.FontPath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="24sp"
            android:textColor="@color/colorBlack"
            android:ems="10"
            android:id="@+id/password"
            android:hint="@string/register_password" />

        <EditText
            android:theme="@style/EditTextStyle"
            android:textAppearance="@style/TextAppearance.FontPath"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textSize="24sp"
            android:textColor="@color/colorBlack"
            android:ems="10"
            android:id="@+id/confirm_password"
            android:hint="@string/register_confirm_password" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="36dp">

            <Button
                android:id="@+id/btn_register"
                android:textAppearance="@style/TextAppearance.FontPath"
                android:theme="@style/DangerButton"
                android:textSize="@dimen/text_size"
                android:layout_gravity="center_horizontal"
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:layout_marginTop="20dp"
                android:text="@string/register_now" />

            <ProgressBar
                android:id="@+id/btn_register_loading"
                android:layout_width="300dp"
                android:layout_height="70dp"
                android:layout_centerInParent="true"
                android:visibility="gone" />
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>