<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_admin"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/backrepeat"
    tools:context="com.example.alleoindong.cabtap.com.alleoindong.cabtap.admin.AdminActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:layout_weight="1"
            android:id="@+id/btn_driver_maintenance"
            android:theme="@style/IconButtonsWhite"
            android:textAppearance="@style/TextAppearance.FontPath"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/driver_maintenance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_driver" />

        <Button
            android:layout_weight="1"
            android:id="@+id/btn_vehicle_maintenance"
            android:theme="@style/IconButtonsWhite"
            android:textAppearance="@style/TextAppearance.FontPath"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/vehicle_maintenance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_vehicle" />

        <Button
            android:layout_weight="1"
            android:id="@+id/btn_maintenance"
            android:theme="@style/IconButtonsWhite"
            android:textAppearance="@style/TextAppearance.FontPath"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/maintenance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_maintenance" />

        <Button
            android:layout_weight="1"
            android:id="@+id/btn_expense_tracking"
            android:theme="@style/IconButtonsWhite"
            android:textAppearance="@style/TextAppearance.FontPath"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/expense_tracking"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_expenses" />

        <Button
            android:layout_weight="1"
            android:id="@+id/btn_reports"
            android:theme="@style/IconButtonsWhite"
            android:textAppearance="@style/TextAppearance.FontPath"
            android:textSize="@dimen/text_size_medium"
            android:text="@string/reports"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/ic_reports" />

    </LinearLayout>



</RelativeLayout>
